updated toString for better compatibility